@@ -1,4 +1,5 @@
 export const PAYMENT_METHOD_NAME_CARD = 'woocommerce_payments';
+export const PAYMENT_METHOD_NAME_BECS = 'woocommerce_payments_becs';
 export const PAYMENT_METHOD_NAME_GIROPAY = 'woocommerce_payments_giropay';
 export const PAYMENT_METHOD_NAME_SEPA = 'woocommerce_payments_sepa';
 export const PAYMENT_METHOD_NAME_SOFORT = 'woocommerce_payments_sofort';
