@@ -1,0 +1,27 @@
+/* eslint-disable max-len */
+/**
+ * External dependencies
+ */
+import React from 'react';
+
+export default ( props ) => (
+	<svg
+		width="64"
+		height="40"
+		viewBox="0 0 64 40"
+		fill="none"
+		xmlns="http://www.w3.org/2000/svg"
+		{ ...props }
+	>
+		<path
+			d="M0 4C0 1.79086 1.79086 0 4 0H60C62.2091 0 64 1.79086 64 4V36C64 38.2091 62.2091 40 60 40H4C1.79086 40 0 38.2091 0 36V4Z"
+			fill="white"
+		/>
+		<path
+			fillRule="evenodd"
+			clipRule="evenodd"
+			d="M32.0817 8.32996L21 14.1625V16.4955H43.1635V14.1625L32.0817 8.32996ZM32.0817 10.9661L38.1592 14.1623H26.0043L32.0817 10.9661ZM26.2492 18.8285H23.9162V26.994H26.2492V18.8285ZM33.2482 18.8285H30.9152V26.994H33.2482V18.8285ZM21 31.66V29.327H43.1635V31.66H21ZM40.2472 18.8285H37.9142V26.994H40.2472V18.8285Z"
+			fill="#646970"
+		/>
+	</svg>
+);
