@@ -34,6 +34,7 @@ describe( 'PaymentMethods', () => {
 		useEnabledPaymentMethodIds.mockReturnValue( [ [], jest.fn() ] );
 		useGetAvailablePaymentMethodIds.mockReturnValue( [
 			'card',
+			'au_becs_debit',
 			'bancontact',
 			'giropay',
 			'ideal',
@@ -43,6 +44,7 @@ describe( 'PaymentMethods', () => {
 		] );
 		useGetPaymentMethodStatuses.mockReturnValue( {
 			card_payments: upeCapabilityStatuses.ACTIVE,
+			au_becs_debit: upeCapabilityStatuses.ACTIVE,
 			bancontact_payments: upeCapabilityStatuses.ACTIVE,
 			giropay_payments: upeCapabilityStatuses.ACTIVE,
 			ideal_payments: upeCapabilityStatuses.ACTIVE,
@@ -69,6 +71,9 @@ describe( 'PaymentMethods', () => {
 		const cc = screen.getByRole( 'checkbox', {
 			name: 'Credit card / debit card',
 		} );
+		const becs = screen.getByRole( 'checkbox', {
+			name: 'BECS Direct Debit',
+		} );
 		const sepa = screen.getByRole( 'checkbox', {
 			name: 'SEPA Direct Debit',
 		} );
@@ -83,6 +88,7 @@ describe( 'PaymentMethods', () => {
 		const ideal = screen.getByRole( 'checkbox', { name: 'iDEAL' } );
 
 		const allMethods = [
+			becs,
 			bancontact,
 			giropay,
 			sofort,
@@ -113,6 +119,7 @@ describe( 'PaymentMethods', () => {
 		useEnabledPaymentMethodIds.mockReturnValue( [
 			[
 				'Credit card / debit card',
+				'BECS Direct Debit',
 				'Bancontact',
 				'giropay',
 				'iDEAL',
@@ -125,6 +132,10 @@ describe( 'PaymentMethods', () => {
 		useGetPaymentMethodStatuses.mockReturnValue( {
 			card_payments: {
 				status: upeCapabilityStatuses.ACTIVE,
+				requirements: [],
+			},
+			au_becs_debit: {
+				status: upeCapabilityStatuses.INACTIVE,
 				requirements: [],
 			},
 			bancontact_payments: {
