@@ -10,6 +10,7 @@ use Automattic\WooCommerce\Blocks\RestApi;
 use WCPay\Payment_Methods\UPE_Payment_Gateway;
 use WCPay\Payment_Methods\CC_Payment_Method;
 use WCPay\Payment_Methods\Bancontact_Payment_Method;
+use WCPay\Payment_Methods\Becs_Payment_Method;
 use WCPay\Payment_Methods\Giropay_Payment_Method;
 use WCPay\Payment_Methods\Sofort_Payment_Method;
 use WCPay\Payment_Methods\P24_Payment_Method;
@@ -85,6 +86,7 @@ class WC_REST_Payments_Settings_Controller_Test extends WP_UnitTestCase {
 
 		$mock_payment_methods   = [];
 		$payment_method_classes = [
+			Becs_Payment_Method::class,
 			CC_Payment_Method::class,
 			Bancontact_Payment_Method::class,
 			Giropay_Payment_Method::class,
@@ -154,7 +156,7 @@ class WC_REST_Payments_Settings_Controller_Test extends WP_UnitTestCase {
 		$enabled_method_ids = $response->get_data()['available_payment_method_ids'];
 
 		$this->assertEquals(
-			[ 'card', 'bancontact', 'giropay', 'ideal', 'sofort', 'sepa_debit', 'p24' ],
+			[ 'card', 'au_becs_debit', 'bancontact', 'giropay', 'ideal', 'sofort', 'sepa_debit', 'p24' ],
 			$enabled_method_ids
 		);
 	}
