@@ -183,6 +183,7 @@ class UPE_Payment_Gateway_Test extends WP_UnitTestCase {
 			P24_Payment_Method::class,
 			Ideal_Payment_Method::class,
 			Sepa_Payment_Method::class,
+			Becs_Payment_Method::class,
 		];
 
 		$this->mock_rate_limiter = $this->createMock( Session_Rate_Limiter::class );
@@ -1107,6 +1108,9 @@ class UPE_Payment_Gateway_Test extends WP_UnitTestCase {
 		$ideal_details             = [
 			'type' => 'ideal',
 		];
+		$becs_details              = [
+			'type' => 'au_becs_debit',
+		];
 
 		$charge_payment_method_details = [
 			$visa_credit_details,
@@ -1118,6 +1122,7 @@ class UPE_Payment_Gateway_Test extends WP_UnitTestCase {
 			$p24_details,
 			$ideal_details,
 			$sepa_details,
+			$becs_details,
 		];
 
 		$expected_payment_method_titles = [
@@ -1130,6 +1135,7 @@ class UPE_Payment_Gateway_Test extends WP_UnitTestCase {
 			'Przelewy24 (P24)',
 			'iDEAL',
 			'SEPA Direct Debit',
+			'BECS Direct Debit',
 		];
 
 		foreach ( $charge_payment_method_details as $i => $payment_method_details ) {
@@ -1181,6 +1187,9 @@ class UPE_Payment_Gateway_Test extends WP_UnitTestCase {
 		$mock_ideal_details      = [
 			'type' => 'ideal',
 		];
+		$mock_becs_details       = [
+			'type' => 'au_becs_debit',
+		];
 
 		$this->set_cart_contains_subscription_items( false );
 		$card_method       = $this->mock_payment_methods['card'];
@@ -1190,6 +1199,7 @@ class UPE_Payment_Gateway_Test extends WP_UnitTestCase {
 		$bancontact_method = $this->mock_payment_methods['bancontact'];
 		$sepa_method       = $this->mock_payment_methods['sepa_debit'];
 		$ideal_method      = $this->mock_payment_methods['ideal'];
+		$becs_method       = $this->mock_payment_methods['au_becs_debit'];
 
 		$this->assertEquals( 'card', $card_method->get_id() );
 		$this->assertEquals( 'Credit card / debit card', $card_method->get_title() );
@@ -1234,6 +1244,12 @@ class UPE_Payment_Gateway_Test extends WP_UnitTestCase {
 		$this->assertEquals( 'iDEAL', $ideal_method->get_title( $mock_ideal_details ) );
 		$this->assertTrue( $ideal_method->is_enabled_at_checkout() );
 		$this->assertFalse( $ideal_method->is_reusable() );
+
+		$this->assertEquals( 'au_becs_debit', $becs_method->get_id() );
+		$this->assertEquals( 'BECS Direct Debit', $becs_method->get_title() );
+		$this->assertEquals( 'BECS Direct Debit', $becs_method->get_title( $mock_becs_details ) );
+		$this->assertTrue( $becs_method->is_enabled_at_checkout() );
+		$this->assertFalse( $becs_method->is_reusable() );
 	}
 
 	public function test_only_reusabled_payment_methods_enabled_with_subscription_item_present() {
@@ -1246,6 +1262,7 @@ class UPE_Payment_Gateway_Test extends WP_UnitTestCase {
 		$sepa_method       = $this->mock_payment_methods['sepa_debit'];
 		$p24_method        = $this->mock_payment_methods['p24'];
 		$ideal_method      = $this->mock_payment_methods['ideal'];
+		$becs_method       = $this->mock_payment_methods['au_becs_debit'];
 
 		$this->assertTrue( $card_method->is_enabled_at_checkout() );
 		$this->assertFalse( $giropay_method->is_enabled_at_checkout() );
@@ -1254,6 +1271,7 @@ class UPE_Payment_Gateway_Test extends WP_UnitTestCase {
 		$this->assertTrue( $sepa_method->is_enabled_at_checkout() );
 		$this->assertFalse( $p24_method->is_enabled_at_checkout() );
 		$this->assertFalse( $ideal_method->is_enabled_at_checkout() );
+		$this->assertFalse( $becs_method->is_enabled_at_checkout() );
 	}
 
 	public function test_only_valid_payment_methods_returned_for_currency() {
@@ -1264,6 +1282,7 @@ class UPE_Payment_Gateway_Test extends WP_UnitTestCase {
 		$sepa_method       = $this->mock_payment_methods['sepa_debit'];
 		$p24_method        = $this->mock_payment_methods['p24'];
 		$ideal_method      = $this->mock_payment_methods['ideal'];
+		$becs_method       = $this->mock_payment_methods['au_becs_debit'];
 
 		self::$mock_site_currency = 'EUR';
 
@@ -1274,6 +1293,7 @@ class UPE_Payment_Gateway_Test extends WP_UnitTestCase {
 		$this->assertTrue( $sepa_method->is_currency_valid() );
 		$this->assertTrue( $p24_method->is_currency_valid() );
 		$this->assertTrue( $ideal_method->is_currency_valid() );
+		$this->assertFalse( $becs_method->is_currency_valid() );
 
 		self::$mock_site_currency = 'USD';
 
@@ -1284,6 +1304,10 @@ class UPE_Payment_Gateway_Test extends WP_UnitTestCase {
 		$this->assertFalse( $sepa_method->is_currency_valid() );
 		$this->assertFalse( $p24_method->is_currency_valid() );
 		$this->assertFalse( $ideal_method->is_currency_valid() );
+		$this->assertFalse( $becs_method->is_currency_valid() );
+
+		self::$mock_site_currency = 'AUD';
+		$this->assertTrue( $becs_method->is_currency_valid() );
 
 		self::$mock_site_currency = '';
 	}
