@@ -2,6 +2,7 @@
 
 = 3.7.0 - 2022-xx-xx =
 * Fix - Currency name not translated the Overview card title.
+* Add - UPE payment methods - BECS Direct Debit.
 
 = 3.6.0 - 2022-01-20 =
 * Update - Bump minimum required version of WooCommerce from 4.4 to 4.5.
